--- a/packages/@lightningjs/ui-components/src/docs/Introduction.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Introduction.mdx
@@ -1,7 +1,6 @@
 ﻿import { Meta } from '@storybook/blocks';
-import * as IntroductionStory from './Introduction.stories';
 
-<Meta of={IntroductionStory} />;
+<Meta title="Docs / Introduction" />;
 
 # Introduction
 
