--- a/packages/@lightningjs/ui-components/src/docs/Base.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Base.mdx
@@ -1,24 +1,6 @@
-﻿import { Meta, Description } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 
-<Meta title="Docs / Base Component " />
-
-<!--
-  Copyright 2023 Comcast Cable Communications Management, LLC
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-  http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-
-  SPDX-License-Identifier: Apache-2.0
--->
+<Meta title="Docs/Base Component" />
 
 # Base Component
 
@@ -70,7 +52,7 @@ class MyComponent extends withMixins(Base) {}
 
 ### Methods
 
-#### static get \_\_componentName(): string
+#### static get componentName(): string
 
 Any component which extends the Base component and uses the `withThemeStyles` mixin requires this static accessor, which returns the name of the component. This name is used by the theme file in order to map component overrides and extensions.
 
@@ -87,6 +69,6 @@ Returns a boolean for whether or not the entirety of the component is rendered w
 
 This method returns the number which is set as focusScale in the theme (context.theme.layout.focusScale). This value can referenced when updating the scale property on the component when it is focused.
 
-#### getUnfocusScale(): number<1>
+#### getUnfocusScale(): number
 
 This method returns a value that can be used to apply a scale property on focus to a component from a themed value. This value can referenced when updating the scale property on the component when it is unfocused.
