--- a/packages/@lightningjs/ui-components/src/docs/ThemingMode.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingMode.mdx
@@ -1,23 +1,4 @@
-﻿<!--
-  Copyright 2023 Comcast Cable Communications Management, LLC
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-  http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-
-  SPDX-License-Identifier: Apache-2.0
--->
-
-
-import { Meta, Description } from '@storybook/addon-docs';
+﻿import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Docs / Theming / Modes" />
 
@@ -27,10 +8,10 @@ LightningUI components utilize modes to update `this.style`. The component's app
 
 **Common modes include:**
 
-* unfocused (default)
-* focused
-* disabled
-* selected
+- unfocused (default)
+- focused
+- disabled
+- selected
 
 By default each component will attempt to find a `focused` mode when thte component gains focus.
 
@@ -41,7 +22,7 @@ You can set any component's default mode by specifying it in the `componentConfi
 ```js
 componentConfig: {
   Tile: {
-    mode: 'focused'
+    mode: 'focused';
   }
 }
 ```
@@ -54,7 +35,7 @@ componentConfig: {
     styleConfig: {
       mode: {
         focused: {
-          radius: 100
+          radius: 100;
         }
       }
     }
