feature(Storybook): adds linter fixes for MDX files"

--- a/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
@@ -1,4 +1,4 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 import Key from '.';
 
 # Key
@@ -27,10 +27,6 @@ class Basic extends lng.Component {
 }
 ```
 
-<Canvas>
-  <Story id="keyboard-key--basic" />
-</Canvas>
-
 ## API
 
 ### Properties
@@ -40,7 +36,7 @@ class Basic extends lng.Component {
 | icon    | string   | false    | null      | url for icon                                                                                                                                                                                                    |
 | onEnter | function | false    | undefined | if defined, will be invoked when enter is pressed while focused on the `Key` component. When defined, the `$onSoftKey` and `$toggleKeyboard` events will not be emitted from the key (see Events section below) |
 | size    | string   | false    | sm        | width of the Key                                                                                                                                                                                                |
-| toggle  | boolean  | false    | -         | used to toggle `$toggleKeyboard`                                                                                                                                                                                |
+| toggle  | boolean  | false    |           | used to toggle `$toggleKeyboard`                                                                                                                                                                                |
 
 ### Style Properties
 
@@ -55,14 +51,14 @@ class Basic extends lng.Component {
 
 ### Events
 
-## $onSoftKey({ key: string, toggle: boolean })
+## $onSoftKey(\{ key: string, toggle: boolean })
 
 Fired when the enter key is pressed while focused on a `Key` component. An event will be emitted
 via Lightning's `fireAncestors` with an object of the `Key`'s `title` and `toggle` property values.
 If a funciton is passed to the `Key`'s `onEnter` property, that function will be invoked and the
 `$onSoftKey` event will not be emitted.
 
-## $toggleKeyboard({ key: string, toggle: boolean })
+## $toggleKeyboard(\{ key: string, toggle: boolean })
 
 Fired when the enter key is pressed while focused on a `Key` component with its `toggle` property
 set to `true`. If a funciton is passed to the `Key`'s `onEnter` property, that function will be invoked and the
