--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestRenderer/toJSON.stories.mdx
@@ -18,7 +18,7 @@
 
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="Unit Testing / Test Renderer / toJSON" />
+<Meta title="Docs / Unit Testing / Test Renderer / toJSON" />
 
 # toJSON
 
