--- a/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/makeCreateComponent.stories.mdx
+++ b/packages/@lightningjs/ui-components-test-utils/src/docs/TestUtils/makeCreateComponent.stories.mdx
@@ -18,7 +18,7 @@
 
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="Unit Testing / Test Utils / makeCreateComponent " />
+<Meta title="Docs / Unit Testing / Test Utils / makeCreateComponent " />
 
 # makeCreateComponent
 
