feature(Storybook): updates mdx files to new docs config requirements

--- a/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Badge/Badge.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta, Canvas } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 import Badge from '.';
 import * as BadgeStories from './Badge.stories.js';
 
@@ -32,17 +32,6 @@ class Example extends lng.Component {
 }
 ```
 
-<<<<<<< HEAD
-
-<Canvas>
-  <Story id="components-badge--text" />
-</Canvas>
-
-=======
-
-> > > > > > > 5e82b56b (feature(Storybook): updates mdx files with proper imports and renames doc only mdx files)
-> > > > > > > Or an icon:
-
 ```js
 import { Badge } from '@lightningjs/ui-components';
 
@@ -59,17 +48,6 @@ class Example extends lng.Component {
   }
 }
 ```
-
-<<<<<<< HEAD
-
-<Canvas>
-  <Story id="components-badge--icon-png" />
-</Canvas>
-
-=======
-
-> > > > > > > 5e82b56b (feature(Storybook): updates mdx files with proper imports and renames doc only mdx files)
-> > > > > > > A title and an icon can also be used together:
 
 ```js
 import { Badge } from '@lightningjs/ui-components';
