--- a/packages/@lightningjs/ui-components/src/components/Card/CardTitle.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Card/CardTitle.mdx
@@ -1,5 +1,7 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
-import CardTitle from './CardTitle.js';
+﻿import { Meta } from '@storybook/blocks';
+import * as CardTitleStories from './CardTitle.stories';
+
+<Meta of={CardTitleStories} />
 
 # CardTitle
 
