--- a/packages/@lightningjs/ui-components/src/components/GridOverlay/GridOverlay.mdx
+++ b/packages/@lightningjs/ui-components/src/components/GridOverlay/GridOverlay.mdx
@@ -1,5 +1,8 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 import GridOverlay from '.';
+import * as GridOverlayStories from './GridOverlay.stories';
+
+<Meta of={GridOverlayStories} />
 
 # GridOverlay
 
