--- a/packages/@lightningjs/ui-components/src/components/InlineContent/InlineContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/InlineContent/InlineContent.mdx
@@ -1,5 +1,8 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 import InlineContent from '.';
+import * as InlineContentStories from './InlineContent.stories';
+
+<Meta of={InlineContentStories} />
 
 # InlineContent
 
