--- a/packages/@lightningjs/ui-components/src/components/Keyboard/Keyboard.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Keyboard/Keyboard.mdx
@@ -1,4 +1,7 @@
 ﻿import { Meta } from '@storybook/blocks';
+import * as KeyboardStories from './Keyboard.stories';
+
+<Meta of={KeyboardStories} />
 
 # Keyboard
 
