--- a/packages/@lightningjs/ui-components/src/components/Marquee/Marquee.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Marquee/Marquee.mdx
@@ -1,4 +1,7 @@
-﻿import { Story } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
+import * as MarqueeStories from './Marquee.stories';
+
+<Meta of={MarqueeStories} />
 
 # Marquee
 
