--- a/packages/@lightningjs/ui-components/src/components/Toggle/Toggle.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Toggle/Toggle.mdx
@@ -1,5 +1,7 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
-import Toggle from '.';
+﻿import { Meta } from '@storybook/blocks';
+import * as ToggleStories from './Toggle.stories';
+
+<Meta of={ToggleStories} />
 
 # Toggle
 
