--- a/packages/@lightningjs/ui-components/src/docs/LightningResources.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/LightningResources.mdx
@@ -1,6 +1,6 @@
 ﻿import { Meta } from '@storybook/blocks';
 
-<Meta title="Docs / Lightning Resources" />
+<Meta title="Documentation/Lightning Resources" />
 
 ## Additional Resources
 
