--- a/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
@@ -1,7 +1,7 @@
 import { Meta, Markdown } from '@storybook/blocks';
 import StorybookStructure from '../../../../../STORYBOOK.md?raw';
 
-<Meta title="Docs / Storybook Structure" />
+<Meta title="Documentation/Storybook Structure" />
 
 <Markdown>{StorybookStructure}</Markdown>
 
