--- a/packages/@lightningjs/ui-components/src/docs/Theming.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Theming.mdx
@@ -2,7 +2,7 @@
 import CustomThemeProgressBar from '../assets/images/CustomThemeProgressBar.png';
 import CustomUpdatedProgressBar from '../assets/images/CustomProgressBar.png';
 
-<Meta title="Docs / Theming / Overview" />
+<Meta title="Documentation / Theming / Overview" />
 
 # Theming
 
