--- a/packages/@lightningjs/ui-components/src/docs/ThemingComponentConfig.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingComponentConfig.mdx
@@ -1,6 +1,6 @@
-import { Meta, Description } from '@storybook/blocks';
+import { Meta } from '@storybook/blocks';
 
-<Meta title="Docs / Theming / Component Config" />
+<Meta title="Documentation / Theming / Component Config" />
 
 # Component Config
 
