--- a/packages/@lightningjs/ui-components/src/docs/ThemingExtensions.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingExtensions.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta, Description } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 
 import ExtensionProgressBar from '../assets/images/ExtensionProgressBar.png';
 
@@ -8,7 +8,7 @@ import ExtensionProgressBar from '../assets/images/ExtensionProgressBar.png';
   }
 `}</style>
 
-<Meta title="Docs / Theming/ Extensions" />
+<Meta title="Documentation / Theming/ Extensions" />
 
 # Extensions
 
