--- a/packages/@lightningjs/ui-components/src/docs/ThemingMode.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingMode.mdx
@@ -1,6 +1,6 @@
-﻿import { Meta } from '@storybook/addon-docs';
+﻿import { Meta } from '@storybook/blocks';
 
-<Meta title="Docs / Theming / Modes" />
+<Meta title="Documentation / Theming / Modes" />
 
 # Mode
 
