--- a/packages/@lightningjs/ui-components/src/docs/ThemingStorybook.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingStorybook.mdx
@@ -1,6 +1,6 @@
 ﻿import { Meta } from '@storybook/blocks';
 
-<Meta title="Docs / Theming/ Use in Storybook" />
+<Meta title="Documentation / Theming/ Use in Storybook" />
 
 # Theming and Storybook
 
