--- a/packages/@lightningjs/ui-components/src/docs/ThemingSubTheming.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingSubTheming.mdx
@@ -1,4 +1,4 @@
-﻿import { Meta, Description } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 import SubThemingExample from '../assets/images/SubTheming.png';
 import July4thProgressBar from '../assets/images/July4thProgressBar.png';
 import UpdatedJuly4thProgressBar from '../assets/images/UpdatedJuly4thProgressBar.png';
@@ -10,7 +10,7 @@ import MultiSubThemeProgressBars from '../assets/images/MultiSubThemeProgressBar
   }
 `}</style>
 
-<Meta title="Docs / Theming/ Subtheming" />
+<Meta title="Documentation / Theming/ Subtheming" />
 
 # Subtheming
 
