--- a/packages/@lightningjs/ui-components/src/mixins/withEditItems/withEditItems.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withEditItems/withEditItems.mdx
@@ -1,4 +1,7 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
+import * as withEditItemsStories from './withEditItems.stories';
+
+<Meta of={withEditItemsStories} />
 
 # withEditItems
 
