--- a/packages/@lightningjs/ui-components/src/mixins/withTags/withTags.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withTags/withTags.mdx
@@ -1,4 +1,7 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
+import * as withTagsStories from './withTags.stories';
+
+<Meta of={withTagsStories} />
 
 # withTags
 
