--- a/packages/@lightningjs/ui-components/src/mixins/withThemeStyles/withThemeStyles.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withThemeStyles/withThemeStyles.mdx
@@ -1,14 +1,13 @@
-import { Canvas, Story } from '@storybook/blocks';
+import { Meta } from '@storybook/blocks';
+import * as withThemeStylesStories from './withThemeStyles.stories';
+
+<Meta of={withThemeStylesStories} />
 
 # withThemeStyles
 
 Use `withThemeStyles` to create composable components that can be easily themed and decoupled from functionality.
 
 The `withThemeStyles` mixin provides flexibility with _composability_: the concept of combining the properties of multiple components to create a new component. This is not intended to be a replacement for building a component API, but rather a tool for augmentation.
-
-<Canvas>
-  <Story id="utilities-withthemestyles--with-theme-styles" />
-</Canvas>
 
 ## Usage
 
