--- a/packages/@lightningjs/ui-components/src/mixins/withUpdates/withUpdates.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withUpdates/withUpdates.mdx
@@ -1,4 +1,7 @@
 ﻿import { Meta } from '@storybook/blocks';
+import * as withUpdatesStories from './withUpdates.stories';
+
+<Meta of={withUpdatesStories} />
 
 # withUpdates
 
