--- a/packages/apps/lightning-ui-docs/src/Contributing.mdx
+++ b/packages/apps/lightning-ui-docs/src/Contributing.mdx
@@ -1,6 +1,6 @@
 ﻿import { Meta, Markdown } from '@storybook/blocks';
 import Contributing from '../../../../CONTRIBUTING.md?raw';
 
-<Meta title="Docs / Contributing" />
+<Meta title="Documentation / Contributing" />
 
 <Markdown>{Contributing}</Markdown>
