--- a/packages/apps/lightning-ui-docs/src/Readme.mdx
+++ b/packages/apps/lightning-ui-docs/src/Readme.mdx
@@ -1,6 +1,6 @@
 ﻿import { Markdown, Meta } from '@storybook/blocks';
 import ReadMe from '../../../../README.md?raw';
 
-<Meta title="Docs / Read Me" />
+<Meta title="Documentation/ Read Me" />
 
 <Markdown>{ReadMe}</Markdown>
