--- a/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Button/Button.mdx
@@ -1,5 +1,8 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 import Button from '.';
+import * as ButtonStories from './Button.stories';
+
+<Meta of={ButtonStories} />
 
 # Button
 
@@ -27,10 +30,6 @@ class Example extends lng.Component {
   }
 }
 ```
-
-<Canvas>
-  <Story id="components-button--button" />
-</Canvas>
 
 ### Sizing
 
