--- a/packages/@lightningjs/ui-components/src/components/Card/Card.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Card/Card.mdx
@@ -1,5 +1,8 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 import Card from './Card';
+import * as CardStories from './Card.stories';
+
+<Meta of={CardStories} />
 
 # Card
 
@@ -28,10 +31,6 @@ class Basic extends lng.Component {
 }
 ```
 
-<Canvas>
-  <Story id="components-card--card" />
-</Canvas>
-
 ## API
 
 ### Properties
@@ -42,10 +41,10 @@ class Basic extends lng.Component {
 
 ### Style Properties
 
-| name                     | type             | description                                                                  |
-| ------------------------ | ---------------- | ---------------------------------------------------------------------------- |
-| backgroundColor          | string           | color of the card                                                            |
-| paddingHorizontal        | number           | padding on the x-axis between the right and left of the card and its content |
-| paddingVertical          | number           | padding on the y-axis between the top and bottom of the card and its content |
-| radius                   | number \| array  | corner radius of card                                                        |
-| titleTextStyle           | string \| object | text style for the title text                                                |
+| name              | type             | description                                                                  |
+| ----------------- | ---------------- | ---------------------------------------------------------------------------- |
+| backgroundColor   | string           | color of the card                                                            |
+| paddingHorizontal | number           | padding on the x-axis between the right and left of the card and its content |
+| paddingVertical   | number           | padding on the y-axis between the top and bottom of the card and its content |
+| radius            | number \| array  | corner radius of card                                                        |
+| titleTextStyle    | string \| object | text style for the title text                                                |
