--- a/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
@@ -1,5 +1,7 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
-import CardContent from '.';
+﻿import { Meta } from '@storybook/blocks';
+import * as CardContentStories from './CardContent.stories';
+
+<Meta of={CardContentStories} />
 
 # CardContent
 
@@ -26,10 +28,6 @@ class Basic extends lng.Component {
   }
 }
 ```
-
-<Canvas>
-  <Story id="components-cardcontent--card-content" />
-</Canvas>
 
 ## API
 
