--- a/packages/@lightningjs/ui-components/src/docs/Base.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Base.mdx
@@ -1,6 +1,6 @@
 ﻿import { Meta } from '@storybook/blocks';
 
-<Meta title="Docs/Base Component" />
+<Meta title="Documentation/Base Component" />
 
 # Base Component
 
