--- a/packages/@lightningjs/ui-components/src/docs/Introduction.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Introduction.mdx
@@ -1,6 +1,6 @@
 ﻿import { Meta } from '@storybook/blocks';
 
-<Meta title="Docs / Introduction" />;
+<Meta title="Documentation/Introduction" />;
 
 # Introduction
 
