--- a/packages/@lightningjs/ui-components/src/docs/ThemingHierarchy.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingHierarchy.mdx
@@ -1,7 +1,7 @@
-﻿import { Meta, Description } from '@storybook/addon-docs';
+﻿import { Meta } from '@storybook/addon-docs';
 import Flowchart from '../assets/images/Flowchart.png';
 
-<Meta title="Docs / Theming/ Hierarchy" />
+<Meta title="Documentation / Theming/ Hierarchy" />
 
 # Theming Hierarchy
 
