--- a/packages/@lightningjs/ui-components/src/docs/ThemingTone.stories.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/ThemingTone.stories.mdx
@@ -1,6 +1,6 @@
-﻿import { Meta, Description } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
 
-<Meta title="Docs / Theming / Tones" />
+<Meta title="Documentation / Theming / Tones" />
 
 # Tone
 
