--- a/packages/@lightningjs/ui-components/src/mixins/withLayout/withLayout.mdx
+++ b/packages/@lightningjs/ui-components/src/mixins/withLayout/withLayout.mdx
@@ -1,4 +1,7 @@
-﻿import { Canvas, Story } from '@storybook/blocks';
+﻿import { Meta } from '@storybook/blocks';
+import * as withLayoutStories from './withLayout.stories';
+
+<Meta of={withLayoutStories} />
 
 # withLayout
 
@@ -89,10 +92,6 @@ class Basic extends lng.Component {
 Auto sizing of the item will happen based on the above priority. So if the `w and h` are passed no other calculations will occur.
 If the mixin is unable to calculate the height OR width from the passed parameters. The height will default 9/16 of the width. Inversely the width will default to 16/9 of the height.
 If the mixin is unable to calculate height AND width from the passed parameters. No autosize will occur.
-
-<Canvas>
-  <Story id="utilities-withlayout--with-layout" />
-</Canvas>
 
 ### Properties
 
